--- a/virus.html
+++ b/virus.html
@@ -45,7 +45,7 @@
                 <b-navbar-item href="https://docs.google.com/spreadsheets/d/1qRN1CTiEBqQkxfOUI8_wYfXiWxoVjHKiwruslmfOqSs/edit#gid=0" target="_blank">                
                     Spreadsheet
                 </b-navbar-item>
-                <b-navbar-item href="https://github.com/ronreiter/covid-19-vaccine-tracker" target="_blank">                
+                <b-navbar-item href="https://github.com/Bikramjit21/Hack-Chennai-Covid-vaccine-tracker/blob/master/virus.html" target="_blank">                
                     GitHub
                 </b-navbar-item>
             </template>
