--- a/virus.html
+++ b/virus.html
@@ -31,9 +31,42 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
 
+    <style type="text/css">
+        
+        body.dark-mode{
+            background-color: #111;
+            color: #eee;
+            a{
+                color:#111;
+            }
+        }
+
+        button{
+            background-color: #eee;
+            color: #111;
+        }
+
+        body.light-mode{
+            background-color: #eee;
+            color: #111;
+            a{
+                color:#111;
+            }
+        }
+
+        button{
+            background-color: #111;
+            color: #eee;
+        }
+
+
+
+    </style>
+
 </head>
 
-<body>
+<body id="body" class="dark_mode">
+   
     <div id="app">
         <b-navbar type="is-primary">
             <template slot="brand">
@@ -48,6 +81,12 @@
                 <b-navbar-item href="https://github.com/Bikramjit21/Hack-Chennai-Covid-vaccine-tracker/blob/master/virus.html" target="_blank">                
                     GitHub
                 </b-navbar-item>
+                <b-navbar-item>
+                    <h1>Mode</h1>
+
+                    <button type="button" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode">🌛</button>
+                </b-navbar-item>
+
             </template>
         </b-navbar>
 
@@ -307,6 +346,14 @@
                 }
             }
         })
+
+        function toggleDarkLight(){
+            var body = document.getElementById("body");
+            var currentClass = body.className;
+            body.className = currentClass == "dark-mode" ?
+        "light-mode" : "dark-mode";
+        }
+
     </script>
 </body>
 
